<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.drewing.comic.layout</groupId>
  <artifactId>script2layout</artifactId>

  <packaging>jar</packaging>

  <version>1.0.2-SNAPSHOT</version>
  <name>script2layout</name>
  <url>http://maven.apache.org</url>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>2.9.5</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.9.5</version>
    </dependency>
    <dependency>
        <groupId>org.controlsfx</groupId>
        <artifactId>controlsfx</artifactId>
        <version>8.20.8</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
          <plugin>
              <groupId>com.zenjava</groupId>
              <artifactId>javafx-maven-plugin</artifactId>
              <version>8.8.3</version>
              <configuration>
                  <vendor>drewing.de</vendor>
                  <mainClass>de.drewing.comic.layout.Script2Layout</mainClass>
              </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.0.0</version>
            <configuration>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <archive>
                <manifest>
                  <mainClass>de.drewing.comic.layout.Script2Layout</mainClass>
                </manifest>
              </archive>
            </configuration>
            <executions>
              <execution>
                <id>make-assembly</id>
                <phase>package</phase>
                <goals>
                  <goal>single</goal>
                </goals>
              </execution>
            </executions>
          </plugin>


          <plugin>
	<groupId>com.akathist.maven.plugins.launch4j</groupId>
	<artifactId>launch4j-maven-plugin</artifactId>
	<version>1.7.16</version>
	<executions>
		<execution>
			<id>l4j-clui</id>
			<phase>package</phase>
			<goals><goal>launch4j</goal></goals>
			<configuration>
				<headerType>console</headerType>
				<outfile>target/${project.name}.exe</outfile>
				<jar>target/script2layout-1.0.2-SNAPSHOT-jar-with-dependencies.jar</jar>
				<errTitle>encc</errTitle>
				<classPath>
          <mainClass>de.drewing.comic.layout.Script2Layout</mainClass>
					<addDependencies>true</addDependencies>
					<preCp>anything</preCp>
				</classPath>
				<jre>
					<minVersion>1.8.0</minVersion>
          <jdkPreference>preferJre</jdkPreference>
					<opts>
						<opt>-Djava.endorsed.dirs=./endorsed</opt>
					</opts>
				</jre>
        <icon>src/main/resources/icon/application.ico</icon>
				<versionInfo>
					<fileVersion>1.0.0.0</fileVersion>
					<txtFileVersion>${project.version}</txtFileVersion>
					<fileDescription>${project.name}</fileDescription>
					<copyright>2018 drewing.de</copyright>
					<productVersion>1.0.0.0</productVersion>
					<txtProductVersion>1.0.0.0</txtProductVersion>
					<productName>${project.name}</productName>
					<originalFilename>${project.name}.exe</originalFilename>
					<!-- internalName is mandatory -->
					<internalName>${project.name}</internalName>
				</versionInfo>
			</configuration>
		</execution>
	</executions>
</plugin>

<plugin>
	<artifactId>maven-resources-plugin</artifactId>
	<version>3.0.0</version>
	<executions>
		<execution>
			<id>deploy-to-local-directory</id>
			<phase>install</phase>
			<goals>
				<goal>copy-resources</goal>
			</goals>
			<configuration>
				<outputDirectory>${bin.local.path}</outputDirectory>
				<resources>
					<resource>
						<directory>${project.build.directory}</directory>
						<includes>
							<include>*.exe</include>
						</includes>
						<filtering>false</filtering>
					</resource>
				</resources>
			</configuration>
		</execution>
	</executions>
</plugin>

    </plugins>
  </build>

</project>
